fix(page): break-word if texts are too long

--- a/src/pages/user/index.scss
+++ b/src/pages/user/index.scss
@@ -95,6 +95,7 @@
       margin-top: 1px;
       margin-bottom: 1px;
 
+      overflow-wrap: break-word;
       font-size: 13px;
 
       * + * {
